<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reset"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.LoginActivity">

    <!-- Background Image -->
    <ImageView
        android:id="@+id/login_background_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.7"
        android:scaleType="centerCrop"
        android:src="@drawable/bckgrnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Optional overlay for darker/lighter background effect -->

    <!-- Title (e.g., "MOOD TRACKER") -->

    <!-- User Icon Container -->

    <!-- Username EditText -->
    <View
        android:id="@+id/overlay_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.3"
        android:background="@color/overlay_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="Mood Tracker: Capture Every Color of Your Day."
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <LinearLayout
        android:id="@+id/icon_container"
        android:layout_width="293dp"
        android:layout_height="223dp"
        android:layout_marginTop="92dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_title">

        <!-- Mood Tracker Logo (User Icon changed to Mood Tracker Logo) -->
        <ImageView
            android:id="@+id/image_user_icon"
            android:layout_width="295dp"
            android:layout_height="239dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_corners"
            android:clipToOutline="true"

            android:contentDescription="@string/user_icon_desc"
            android:src="@drawable/ic_mood_tracker" />
    </LinearLayout>

    <!-- Password EditText -->

    <!-- Buttons Container -->

    <EditText
        android:id="@+id/edit_username"
        android:layout_width="355dp"
        android:layout_height="65dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/bold_border"
        android:hint="Email"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icon_container" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="360dp"
        android:layout_height="62dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/bold_border"
        android:hint="Password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_username" />


    <Button
        android:id="@+id/button_reset"
        android:layout_width="176dp"
        android:layout_height="52dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/purple_500"

        android:text="Reset Password"
        android:textColor="@android:color/white"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_password" />

    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="347dp"
        android:layout_height="63dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="176dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.405"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_password">

        <!-- Login Button -->
        <Button
            android:id="@+id/button_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_red_dark"

            android:text="Login"
            android:textColor="@android:color/white"

            android:textStyle="bold" />

        <!-- SignIn Button -->
        <Button
            android:id="@+id/button_signin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_red_dark"

            android:text="Sign Up"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
