...
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp">

            <Button
                android:id="@+id/logout_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Logout"
                android:backgroundTint="@android:color/holo_red_dark"
                android:textColor="@android:color/white"
                android:layout_gravity="right|top"
...
