<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signup_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.SignupActivity">


    <ImageView
        android:id="@+id/login_background_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.7"
        android:scaleType="centerCrop"
        android:src="@drawable/bckgrnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Title for Sign Up -->

    <!-- Profile Image Container with overlay upload icon -->

    <!-- Email EditText -->

    <!-- Password EditText -->

    <!-- Sign Up Button -->

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="358dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/bold_border"
        android:hint="Name"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_username_signup"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="Sign Up"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/profile_image_container"
        android:layout_width="289dp"
        android:layout_height="268dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_signup">

        <!-- Profile Image (default icon initially) -->

        <!-- Upload Icon Overlay -->

        <ImageView
            android:id="@+id/image_user_icon"
            android:layout_width="match_parent"
            android:layout_height="215dp"
            android:contentDescription="@string/user_icon_desc"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_user" />

        <ImageView
            android:id="@+id/icon_upload"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="bottom|end"
            android:layout_margin="8dp"
            android:contentDescription="@string/upload_icon_desc"
            android:src="@drawable/ic_upload" />
    </FrameLayout>

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="358dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/bold_border"
        android:hint="Email"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_image_container" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="361dp"
        android:layout_height="63dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/bold_border"
        android:hint="Password"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_email" />

    <EditText
        android:id="@+id/edit_username_signup"
        android:layout_width="358dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/bold_border"
        android:hint="Username"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_password" />

    <Button
        android:id="@+id/button_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="16dp"
        android:text="Sign Up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_password"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
